# python_webapp_template

./: .gitignore  Dockerfile  README.md  github-actions.yml  pyproject.toml  uwsgi.ini  work_log.md
.github/actions/: build.yml  deploy.yml  info.yml  test.yml
.github/actions/deploy/: action.yml
.github/actions/info/: action.yml
.github/actions/test/: action.yml
.github/workflows/: CD.yml  CI.yml  github-actions.yml
package/: app.py
tests/: test_app.py
