[tool.poetry]
name = "python_webapp"
version = "0.1.0"
description = ""
authors = ["k_yamanaka <vaivailx@gmail.com>"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9.2"
uWSGI = "^2.0.19"
Flask = "^1.1.2"

[tool.poetry.dev-dependencies]
black = "^21.5b0"
flake8 = "^3.9.1"
isort = "^5.8.0"
mypy = "^0.812"
requests = "^2.25.1"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
